--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "cross-env": "^7.0.2",
     "prettier": "^2.1.2",
     "rollup": "^2.27.1",
+    "rollup-plugin-livereload": "^2.0.0",
     "rollup-plugin-serve": "^1.0.4",
     "rollup-plugin-terser": "^7.0.2",
     "typescript": "^4.0.2"
