--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "vue": "3.0.0"
   },
   "scripts": {
+    "prestart": "rm -rf .temp",
     "start": "cross-env NODE_ENV=development rollup -c -w",
     "build": "cross-env NODE_ENV=production rollup -c",
     "format": "prettier --write --parser typescript \"src/**/*.ts?(x)\""
@@ -20,8 +21,10 @@
     "@babel/plugin-syntax-jsx": "^7.10.4",
     "@babel/preset-env": "^7.11.5",
     "@babel/preset-typescript": "^7.10.4",
+    "@rollup/plugin-alias": "^3.1.1",
     "@rollup/plugin-babel": "^5.2.1",
     "@rollup/plugin-commonjs": "^15.0.0",
+    "@rollup/plugin-html": "^0.2.0",
     "@rollup/plugin-node-resolve": "^9.0.0",
     "@rollup/plugin-replace": "^2.3.3",
     "@vue/babel-plugin-jsx": "^1.0.0-rc.3",
@@ -30,8 +33,11 @@
     "prettier": "^2.1.2",
     "rollup": "^2.27.1",
     "rollup-plugin-livereload": "^2.0.0",
+    "rollup-plugin-postcss": "^3.1.8",
     "rollup-plugin-serve": "^1.0.4",
     "rollup-plugin-terser": "^7.0.2",
-    "typescript": "^4.0.2"
+    "rollup-plugin-typescript2": "^0.27.2",
+    "typescript": "^4.0.2",
+    "typescript-plugin-css-modules": "^2.7.0"
   }
 }
